[package]
name = "hamlibptt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.11"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
static_vcruntime = "3.0"

[profile.release]
strip = true
lto = true
panic = "abort"
